src/styles/globals.css
@import "tailwindcss";
@import "@fontsource-variable/geist";

@theme inline {
  --tracking-tightest: -0.04em;
  --font-sans: "Geist Variable", "Geist fallback", "Geist", sans-serif;
  --font-mono: "Geist Mono Variable", "Geist Mono fallback", "Geist Mono", monospace;

  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-muted: var(--muted);
  --color-muted-foreground: var(--muted-foreground);
  --color-accent: var(--accent);
  --color-accent-foreground: var(--accent-foreground);
  --color-border: var(--border);
  --color-ring: var(--ring);

  --radius-sm: calc(var(--radius) * 0.6);
  --radius-md: calc(var(--radius) * 0.8);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) * 1.4);
  --radius-2xl: calc(var(--radius) * 1.8);
  --radius-3xl: calc(var(--radius) * 2.2);
  --radius-4xl: calc(var(--radius) * 2.6);
  --animate-spin: spin 3s linear infinite;
}

:root {
  --background: oklch(1 0 0);
  --foreground: oklch(0.145 0 0);
  --muted: oklch(0.97 0 0);
  --muted-foreground: oklch(0.556 0 0);
  --accent: oklch(0.97 0 0);
  --accent-foreground: oklch(0.205 0 0);
  --border: oklch(0 0 0 / 8%);
  --ring: oklch(0.708 0 0);
  --radius: 0.625rem;
}

.dark {
  --background: oklch(0% 0 0);
  --foreground: oklch(0.985 0 0);
  --muted: oklch(0.145 0 0);
  --muted-foreground: oklch(0.708 0 0);
  --accent: oklch(0.145 0 0);
  --accent-foreground: oklch(0.985 0 0);
  --border: oklch(1 0 0 / 14.5%);
  --ring: oklch(0.439 0 0);
}

@layer base {
  * {
    @apply border-border outline-ring/50;
  }

  body {
    @apply bg-background text-foreground antialiased;
  }
}

@utility line-y {
  @apply relative;
  @apply before:absolute before:-inset-s-[100vw] before:inset-bs-0 before:bg-border before:block-px before:inline-[200vw];
  @apply after:absolute after:-inset-s-[100vw] after:inset-be-0 after:bg-border after:block-px after:inline-[200vw];
}

